Fixed dark mode styles

--- a/src/app/main/home/home-theme.scss
+++ b/src/app/main/home/home-theme.scss
@@ -66,20 +66,20 @@
   }
 
   @if $is-dark {
-    o-grid mat-grid-tile.mat-grid-tile {
-      border: 2px solid mat.get-color-from-palette($foreground, divider);
-      box-shadow: none;
-      background-color: #242A2E;
-    }
+    .main-overflow .main-margin .home-container .content-container .o-grid {
+      .o-grid-no-results {
+        color: mat.get-color-from-palette($foreground, title);
+      }
 
-    .o-grid-no-results {
-      color: mat.get-color-from-palette($foreground, title);
-    }
+      .mat-grid-tile {
+        border: 1px solid mat.get-color-from-palette($foreground, divider);
+        box-shadow: none;
+        background-color: #242A2E;
 
-    .content-container {
-      .container-item {
-        .open-icon {
-          color: #FFFFFF99;
+        .container-item {
+          .open-icon {
+            color: #FFFFFF99;
+          }
         }
       }
     }
