--- a/src/app/main/home/home.component.scss
+++ b/src/app/main/home/home.component.scss
@@ -35,7 +35,7 @@
       overflow: hidden;
 
       .filters {
-        min-width: 232px;
+        min-width: 234px;
         height: fit-content;
         padding-top: 4px;
         align-items: center;
